--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -8,6 +8,11 @@ body{
   margin: 0;
 }
 
+h2, h3, h4{
+  margin: 0;
+  padding: 10px;
+}
+
 nav{
   text-align: right;
   flex-grow: 1;
@@ -60,4 +65,10 @@ header img{
   background-image: url("../images/img-mission-background.jpg");
   height: 700px;
   width: 100%;
+  flex-direction: column;
+}
+
+.mission_statement{
+display: inline-block;
+background-color: black;
 }
