--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -13,6 +13,10 @@ h2, h3, h4{
   padding: 10px;
 }
 
+h5{
+
+}
+
 nav{
   text-align: right;
   flex-grow: 1;
@@ -80,10 +84,6 @@ background-color: black;
   padding-top: 70px;
 }
 
-.features{
-
-}
-
 .feature{
   padding: 5px;
 }
@@ -100,4 +100,38 @@ background-color: black;
   padding: 5px;
   font-weight: bold;
   text-align: center;
+}
+
+.location_image{
+  background-image: url("../images/img-locations-background.jpg");
+  height: 500px;
+  width: 100%;
+  padding-top: 70px;
+}
+
+.locations{
+width: 1100px;
+margin: auto;
+padding-top: 5px;
+}
+
+.location{
+  opacity: 1.0;
+  flex-basis: 280px;
+  background-color: black;
+  padding: 10px;
+  margin: 5px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.contact{
+  height: 200px;
+  width: 100%;
+}
+
+footer{
+padding-left: 20px;
+text-align: left;
 }
